--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 @media only screen and (max-width: 375px){
     
     div{
-        border-radius: 10px;;
+        border-radius: 10px;
+        padding: 32px 26px 32px 26px;
     }
     
     img {
@@ -10,6 +11,9 @@
     }
 
     .quotation{
+        position: absolute;
+        top: 0%;
+        right: 0%;
         border-radius: 0%;
         border: transparent;
     }
@@ -43,6 +47,10 @@
         color: #FFFFFF;
     }
 
+    #jeanette.highlight, #kira.highlight{
+        color: #48556A;
+    }
+
     .review{
         font-family: 'Barlow Semi Condensed', sans-serif;
         font-style: normal;
@@ -55,7 +63,14 @@
         opacity: 0.7;
     }
 
+    #jeanette.review, #kira.review{
+        color: #48556A;
+        mix-blend-mode: normal;
+        opacity: 0.7;
+    }
+
     #daniel{
+        position: relative;
         background-color: #733FC8;
     }
 
