--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,8 @@
-@media only screen and (max-width: 500 px){
+@media only screen and (max-width: 375px){
     body{
         background-color: #F2F2F2;
         display: grid;
-        gap: 30px;
-    }
+        gap: 30px;    }
     div{
         border-radius: 10px;
         padding: 32px 26px 32px 26px;
