--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
-@media only screen and (max-width: 375px){
+@media only screen and (max-width: 500px){
     body{
-        background-color: #F2F2F2;
+        background-color: #DBC9C5;
         display: grid;
         gap: 30px;    }
     div{
@@ -19,6 +19,13 @@
         right: 0%;
         border-radius: 0%;
         border: transparent;
+    }
+
+    .identity{
+        width: 50%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
     }
 
     h5{
