--- a/styles.css
+++ b/styles.css
@@ -4,13 +4,16 @@
         display: grid;
         gap: 30px;    }
     div{
-        border-radius: 10px;
-        padding: 32px 26px 32px 26px;
+        
     }
     
     img {
         border-radius: 50%;
-        border: 2px solid #A775F1
+        border: 2px solid #A775F1;
+        max-height: 50px;
+        margin-right: 10%;
+        
+        
     }
 
     .quotation{
@@ -22,10 +25,12 @@
     }
 
     .identity{
-        width: 50%;
+        
         display: flex;
         flex-direction: row;
-        justify-content: space-around;
+        justify-content: flex-start;
+        align-items: center;
+        padding: 0%;
     }
 
     h5{
@@ -34,6 +39,7 @@
         font-weight: 500;
         font-size: 13px;
         line-height: 13px;
+        margin:0;
     }
 
     .lightName{
@@ -115,23 +121,33 @@
     #daniel{
         position: relative;
         background-color: #733FC8;
+        border-radius: 10px;
+        padding: 32px 26px 32px 26px;
     }
 
     #jonathan{
         background-color: #48556A;
+        border-radius: 10px;
+        padding: 32px 26px 32px 26px;
         
     }
 
     #jeanette{
         background-color: #FFFFFF;
+        border-radius: 10px;
+        padding: 32px 26px 32px 26px;
     }
 
     #patrick{
         background-color: #19202D;
+        border-radius: 10px;
+        padding: 32px 26px 32px 26px;
     }
 
     #kira{
         background-color: #FFFFFF;
+        border-radius: 10px;
+        padding: 32px 26px 32px 26px;
     }
 
 }
