--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 
 
+
     body{
         background-color: #DAE9F2;
         display: grid;
@@ -9,7 +10,8 @@
     img {
         border-radius: 50%;
         border: 2px solid #A775F1;
-        
+        max-height: 50px;
+        margin-right: 10%;
         
         
     }
@@ -35,6 +37,8 @@
         font-family: 'Barlow Semi Condensed', sans-serif;
         color: #FFFFFF;
         font-weight: 500;
+        font-size: 13px;
+        line-height: 13px;
         margin:0;
     }
 
@@ -42,12 +46,16 @@
         font-family: 'Barlow Semi Condensed', sans-serif;
         color:#48556A;
         font-weight: 500;
+        font-size: 13px;
+        line-height: 13px;
     }
 
     .role{
         font-family: 'Barlow Semi Condensed', sans-serif;
         font-style: normal;
         font-weight: 500;
+        font-size: 11px;
+        line-height: 11px;
             /* identical to box height, or 100% */
         color: #FFFFFF;
         mix-blend-mode: normal;
@@ -59,6 +67,7 @@
         font-style: normal;
         font-weight: 500;
         font-size: 11px;
+        line-height: 11px;
             /* identical to box height, or 100% */
         color: #48556A;
         mix-blend-mode: normal;
@@ -69,6 +78,8 @@
         font-family: 'Barlow Semi Condensed', sans-serif;
         font-style: normal;
         font-weight: 600;
+        font-size: 20px;
+        line-height: 24px;
         color: #FFFFFF;
     }
 
@@ -76,6 +87,8 @@
         font-family: 'Barlow Semi Condensed', sans-serif;
         font-style: normal;
         font-weight: 600;
+        font-size: 20px;
+        line-height: 24px;
         color: #48556A;
     }
 
@@ -85,6 +98,8 @@
         font-family: 'Barlow Semi Condensed', sans-serif;
         font-style: normal;
         font-weight: 500;
+        font-size: 13px;
+        line-height: 18px;
                 /* or 138% */
         color: #CFCFCF;
         mix-blend-mode: normal;
@@ -95,6 +110,8 @@
         font-family: 'Barlow Semi Condensed', sans-serif;
         font-style: normal;
         font-weight: 500;
+        font-size: 13px;
+        line-height: 18px;
                 /* or 138% */
         color: #48556A;
         mix-blend-mode: normal;
@@ -105,27 +122,32 @@
         position: relative;
         background-color: #733FC8;
         border-radius: 10px;
+        padding: 32px 26px 32px 26px;
     }
 
     #jonathan{
         background-color: #48556A;
         border-radius: 10px;
+        padding: 32px 26px 32px 26px;
         
     }
 
     #jeanette{
         background-color: #FFFFFF;
         border-radius: 10px;
+        padding: 32px 26px 32px 26px;
     }
 
     #patrick{
         background-color: #19202D;
         border-radius: 10px;
+        padding: 32px 26px 32px 26px;
     }
 
     #kira{
         background-color: #FFFFFF;
         border-radius: 10px;
+        padding: 32px 26px 32px 26px;
     }
 
 
@@ -297,7 +319,7 @@
     }
 
     #daniel{
-        grid-column: 1/2;
+        grid-column: 1/3;
     }
 
     #jonathan {
@@ -310,12 +332,12 @@
     }
 
     #patrick{
-        grid-column: 2/3;
+        grid-column: 2/4;
         grid-row: 2/2;
     }
 
     #kira{
         grid-column: 4/4;
-        grid-row: 1/2;
+        grid-row: 1/3;
     }
 }
